fix: replace the osascript method for opening the pref pane with a safer direct open

--- a/2017/install.txt
+++ b/2017/install.txt
@@ -38,7 +38,7 @@ while true; do
 done
 
 #open the preferences
-osascript osa.scpt > /dev/null
+open "x-apple.systempreferences:com.apple.preference.keyboard"
 
 # all done delete the temp
 cd ..
